bug: Remove stray method